--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,10 +1,9 @@
-django>=1.5.1
 coverage
 coveralls
-mock>=1.0.1
-nose>=1.3.0
+django>=1.5.1
+django-jsonfield>=0.9.12
 django-nose>=1.2
 flake8>=2.1.0
+mock>=1.0.1
+nose>=1.3.0
 tox>=1.7.0
-
-# Additional test requirements go here
