--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,9 +1,10 @@
 coverage
 coveralls
-django>=1.5.1
+django>=1.5.5
 django-jsonfield>=0.9.12
 django-nose>=1.2
 flake8>=2.1.0
 mock>=1.0.1
 nose>=1.3.0
 tox>=1.7.0
+webhooks
