--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ language: python
 python:
   - "3.3"
   - "2.7"
-  - "2.6"
+  - "pypy"
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -r requirements-test.txt
 
 # command to run tests using coverage, e.g. python setup.py test
-script: coverage run --source djwebhooks runtests.py
+script: make test
 
 # report coverage to coveralls.io
-after_success: coveralls
+# after_success: coveralls
