--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,7 +1,7 @@
 coverage
-coveralls
 django>=1.5.5
 django-jsonfield>=0.9.12
+django-model-utils>=2.0.2
 django-nose>=1.2
 flake8>=2.1.0
 mock>=1.0.1
