--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -7,4 +7,4 @@ flake8>=2.1.0
 mock>=1.0.1
 nose>=1.3.0
 tox>=1.7.0
-webhooks>=0.3.0
+git+https://github.com/pydanny/webhooks.git@93bd777acaa27af33ee9a400debe0a6b34a5a101
