--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -2,6 +2,7 @@ coverage
 django>=1.5.5
 django-jsonfield>=0.9.12
 django-model-utils>=2.0.2
+django-rq>=0.6.1
 django-nose>=1.2
 flake8>=2.1.0
 mock>=1.0.1
