--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 django>=1.5.5
 django-jsonfield>=0.9.12
 django-model-utils>=2.0.2
+django-multiselectfield>=0.1.2
 django-rq>=0.6.1
 standardjson
 webhooks>=0.4.1
